# lisk

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  atom.cpp  atom.hpp  callable.cpp  callable.hpp  environment.cpp  environment.hpp  eval.cpp  eval.hpp  eval.inl  expression.cpp  expression.hpp  functor.cpp  functor.hpp  lambda.cpp  lambda.hpp  lisk.cpp  lisk.hpp  meson.build  meson_options.txt  number.cpp  number.hpp  pointer.cpp  pointer.hpp  pointer.inl  shared_list.hpp  shared_list.inl  string.cpp  string.hpp
example/: Makefile  main.cpp  makelist.bat
inc/lisk/: atom.hpp  callable.hpp  environment.hpp  eval.hpp  eval.inl  expression.hpp  expression.inl  functor.hpp  lambda.hpp  lisk.hpp  number.hpp  pointer.hpp  pointer.inl  shared_list.hpp  shared_list.inl  string.hpp
include/: debug.cpp  debug.hpp
include/lisk/: atom.hpp  atom.inl  callable.hpp  callable.inl  environment.hpp  eval.hpp  eval.inl  expression.hpp  expression.inl  functor.hpp  lambda.hpp  lisk.hpp  number.hpp  number.inl  pointer.hpp  pointer.inl  shared_list.hpp  shared_list.inl  string.hpp
src/: atom.cpp  callable.cpp  environment.cpp  eval.cpp  expression.cpp  functor.cpp  lambda.cpp  lisk.cpp  meson.build  number.cpp  pointer.cpp  string.cpp
subprojects/: lak.wrap
