lisk = static_library(
  'lisk',
  [
    'atom.cpp',
    'callable.cpp',
    'environment.cpp',
    'eval.cpp',
    'expression.cpp',
    'functor.cpp',
    'lambda.cpp',
    'lisk.cpp',
    'number.cpp',
    'pointer.cpp',
    'string.cpp',
  ],
  override_options: 'cpp_std=' + version,
  include_directories: include_directories('../inc'),
)
